chart2/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  labels:
    app: haystack-rag
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`rag.localdomain`) && PathPrefix(`/api`)
      middlewares:
        - name: api-strip
      services:
        - name: indexing
          port: api
    - kind: Rule
      match: Host(`rag.localdomain`)
      services:
        - name: frontend
          port: web
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip
  labels:
    app: haystack-rag
spec:
  stripPrefix:
    prefixes:
      - /api
